@@ -693,6 +693,7 @@ extern "C" {
 
 #ifdef __MINGW_INTRIN_INLINE
 #if !defined (__clang__)
+void __cdecl __debugbreak(void);
 __MINGW_INTRIN_INLINE void __cdecl __debugbreak(void)
 {
   __asm__ __volatile__("int $3");
