@@ -1464,6 +1464,8 @@ inline ENUMTYPE &operator ^= (ENUMTYPE &a, ENUMTYPE b) { return (ENUMTYPE &)(((i
 
     VOID _ReadWriteBarrier(VOID);
 
+#include <intrin.h>
+
 #define FastFence __faststorefence		/* FIXME: implement proprely */
 #define LoadFence _mm_lfence
 #define MemoryFence _mm_mfence
@@ -1474,10 +1476,6 @@ inline ENUMTYPE &operator ^= (ENUMTYPE &a, ENUMTYPE b) { return (ENUMTYPE &)(((i
       __asm__ __volatile__ ("" ::: "memory");
     }
 #endif
-
-    void _m_prefetchw(void *Source);
-
-#include <intrin.h>
 
 #define YieldProcessor _mm_pause
 #define MemoryBarrier __faststorefence		/* FIXME: implement proprely */
